# python-venv

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  NEWS.md  README.md  TODO.md  cookiecutter-config.yaml  prospector_profile.yml  pyproject.toml  pytest.ini  python-venv  setup.cfg  setup.py
demo/: README.md  convert-screencasts.sh  demo-commands.txt
dev/: requirements_build.txt  requirements_dev.txt  requirements_test.txt
examples/: install-pyenv.sh  install-venv-dev.sh  install-venv.sh
python_venv/: __init__.py  __main__.py  cli.py  completion.py  const.py  env.py  env.py-move-to-env__pyenv.py  exceptions.py  fmt.py  osenv.py  reqs.py  runcommand.py
python_venv/env/: __init__.py  base.py  conda.py  named_venv.py  pyenv.py  venv.py
tests/python_venv/: contextmgr.py  flags.py  test_cli.py  test_const.py  test_env.py  test_env_conda.py  test_env_named_venv.py  test_env_pyenv.py  test_env_venv.py  test_exceptions.py  test_fmt.py  test_reqs.py
util/: run-tests.sh  sync-requirements.py  tag-version.py  update-version.py
