[build-system]
requires = [
    "setuptools>=51",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]

# https://github.com/psf/black

line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(    # exclude a few common directories in the
        # root of the project
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''
